# zk-snark-from-scratch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: adapter.rs  field.rs  main.rs  polynomial.rs  prover.rs  qap.rs  r1cs.rs  setup.rs  verifier.rs
