[package]
name = "zk-snark-from-scratch"
version = "0.1.0"
edition = "2021"
description = "Educational Rust implementation of Groth16 zk-SNARK"
repository = "https://github.com/moozwen/zk-snark-from-scratch"
license = "MIT"
keywords = ["zkp", "groth16", "zk-snark", "cryptography", "rust"]
categories = ["cryptography"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.228"
serde_json = "1.0.148"

[[bin]]
name = "main"
path = "src/main.rs"
